@@ -56,6 +56,9 @@ since Isabelle2019). INCOMPATIBILITY, use \<open>cartouche\<close> syntax instea
   - Added option "-y" for a dry run.
   - Renamed run_action to run in Mirabelle.action record. Minor INCOMPATIBILITY.
 
+* Meson
+  - Added support for polymorphic "using" facts. Minor INCOMPATIBILITY.
+
 
 
 *** System ***
